--- a/vue/package.json
+++ b/vue/package.json
@@ -15,7 +15,7 @@
         "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
     },
     "dependencies": {
-        "axios": "0.18.0",
+        "axios": "0.18.1",
         "codemirror": "5.39.2",
         "echarts": "^4.2.0-rc.2",
         "element-ui": "2.4.6",
@@ -80,9 +80,9 @@
         "vue-style-loader": "4.1.2",
         "vue-template-compiler": "2.5.17",
         "webpack": "4.16.5",
-        "webpack-bundle-analyzer": "2.13.1",
+        "webpack-bundle-analyzer": "3.3.2",
         "webpack-cli": "3.1.0",
-        "webpack-dev-server": "3.1.5",
+        "webpack-dev-server": ">=3.1.11",
         "webpack-merge": "4.1.4"
     },
     "engines": {
