--- a/vue/package.json
+++ b/vue/package.json
@@ -20,6 +20,7 @@
         "echarts": "^4.2.0-rc.2",
         "element-ui": "2.4.6",
         "highlight.js": "^9.13.1",
+        "image-conversion": "^1.1.9",
         "js-cookie": "2.2.0",
         "normalize.css": "7.0.0",
         "nprogress": "0.2.0",
@@ -82,7 +83,7 @@
         "webpack": "4.16.5",
         "webpack-bundle-analyzer": "3.3.2",
         "webpack-cli": "3.1.0",
-        "webpack-dev-server": ">=3.1.11",
+        "webpack-dev-server": "3.1.5",
         "webpack-merge": "4.1.4"
     },
     "engines": {
